--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -83,6 +83,10 @@ nav a{
     margin-top: 5px;
     margin-bottom: 20px;
 }
+main{
+   max-width: 1140px;
+   margin: auto;
+}
 .about{
     padding: 130px;
     border-radius: 10px;
@@ -90,3 +94,10 @@ nav a{
     margin: 130px 0px;
 }
 
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
