--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -87,6 +87,13 @@ main{
    max-width: 1140px;
    margin: auto;
 }
+
+main section{
+    margin-top: 130px;
+}
+
+
+
 .about{
     padding: 130px;
     border-radius: 10px;
@@ -101,6 +108,23 @@ main{
 .about-info{
     text-align: center;
 }
+
 #what-i-do-description{
     padding: 30px 150px;
+}
+
+.skills-container{
+    display: flex;
+}
+
+.skill{
+    padding: 30px;
+    
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0,06);
+}
+.skill-descrption
+{
+    color: #757575;
 }
