--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -128,3 +128,29 @@ main section{
 {
     color: #757575;
 }
+
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-container{
+   display: flex;
+   gap: 70px; 
+}
+
+.resume-item-institute,{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+
+
+
+.resume-item-institute, .resume-item-description{
+    color: #757575;
+}
+.resume-container hr{
+    margin: 30px;
+}
