--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,3 +154,9 @@ main section{
 .resume-container hr{
     margin: 30px;
 }
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+    color: #FD6E0A;
+}
