--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -140,7 +140,7 @@ main section{
    gap: 70px; 
 }
 
-.resume-item-institute,{
+.resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
@@ -160,3 +160,32 @@ main section{
     margin-top: 50px;
     color: #FD6E0A;
 }
+
+footer{
+    display: flex;
+    gap: 100px;
+    background-color: #fff8f3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+.footer-column{
+    width: 50%;
+
+}
+
+.social-links a{
+    margin-right: 25px;
+}
+
+.contact input[type="text"], .contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 20px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background-color: #fff;
+    border: 0;
+    width: 100%;
+}
+
+.contact input
